--- a/style.css
+++ b/style.css
@@ -1,9 +1,177 @@
-@import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,500;1,400;1,500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,300;0,400;1,200;1,300&display=swap");
 
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
-body{
-    font-family: 'Barlow Semi Condensed', sans-serif;
+body {
+  font-family: "Barlow Semi Condensed", sans-serif;
+  background: radial-gradient(
+    circle at 50% 50%,
+    hsl(214, 47%, 23%),
+    hsl(237, 49%, 15%)
+  );
+  color: aliceblue;
+  min-height: 100vh;
+}
+
+.container {
+  width: 600px;
+  /* background-color: aliceblue; */
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+header {
+  border: 3px solid hsl(217, 16%, 45%);
+  border-radius: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  margin: 50px 0;
+  /* align-items: center; */
+}
+
+header h1 {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  text-transform: uppercase;
+  line-height: 1;
+  font-size: 3rem;
+}
+
+header h4 {
+  color: hsl(229, 64%, 46%);
+  margin: 0;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+}
+
+.score {
+  background-color: aliceblue;
+  padding: 20px 40px;
+  text-align: center;
+  border-radius: 10px;
+}
+.score p {
+  color: hsl(229, 25%, 31%);
+  margin: 0;
+  font-size: 3.5rem;
+  font-weight: 650;
+}
+
+.paper {
+  background: linear-gradient(
+    to bottom,
+    hsl(230, 89%, 62%),
+    hsl(230, 89%, 65%)
+  );
+}
+
+.scissors {
+  background: linear-gradient(to bottom, hsl(39, 89%, 49%), hsl(40, 84%, 53%));
+}
+
+.rock {
+  background: linear-gradient(
+    to bottom,
+    hsl(349, 71%, 52%),
+    hsl(349, 70%, 56%)
+  );
+}
+
+.btn-rules {
+  border: 2px solid wheat;
+  border-radius: 10px;
+  background-color: transparent;
+  text-transform: uppercase;
+  color: aliceblue;
+  font-family: inherit;
+  padding: 10px 25px;
+  font-size: 18px;
+  letter-spacing: 3px;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+}
+
+main {
+  /* background-color: #ffffff; */
+  width: 400px;
+  height: 350px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  position: relative;
+}
+
+main::before {
+  background-image: url("./images/bg-triangle.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  content: "";
+  position: absolute;
+  top: 18%;
+  left: 15%;
+  width: 70%;
+  height: 70%;
+  z-index: -1;
+}
+
+.btn-ways {
+  border: none;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin: 0 25px;
+  box-shadow: inset 0 -8px rgba(0, 0, 0, 0.1);
+}
+
+.btn-ways .wrapper {
+  width: 120px;
+  height: 120px;
+  background-color: #ffffff;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  box-shadow: inset 0 8px rgba(0, 0, 0, 0.2);
+}
+
+.btn {
+  border: 2px solid wheat;
+  border-radius: 10px;
+  background-color: #ffffff;
+  text-transform: uppercase;
+  color: hsl(229, 25%, 31%);
+  font-family: inherit;
+  padding: 10px 25px;
+  font-size: 18px;
+  letter-spacing: 3px;
+}
+
+.selection {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  width: 800px;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.selection .btn-ways {
+  transform: scale(1.4);
+  margin: 50px;
+}
+
+.big-text {
+  font-size: 3rem;
+  margin: 0 0 18px;
+  text-transform: uppercase;
+  line-height: 1;
 }
