--- a/style.css
+++ b/style.css
@@ -42,6 +42,11 @@ header h1 {
   font-size: 3rem;
 }
 
+h2 {
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+
 header h4 {
   color: hsl(229, 64%, 46%);
   margin: 0;
@@ -141,6 +146,16 @@ main::before {
   border-radius: 50%;
   box-shadow: inset 0 8px rgba(0, 0, 0, 0.2);
 }
+.btn-ways:focus {
+  outline: none;
+}
+
+.btn-ways:active {
+  transform: scale(0.9);
+}
+.pick {
+  cursor: pointer;
+}
 
 .btn {
   border: 2px solid wheat;
@@ -155,7 +170,7 @@ main::before {
 }
 
 .selection {
-  display: flex;
+  display: none;
   justify-content: space-between;
   align-items: center;
   text-align: center;
