--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ main::before {
   border-radius: 50%;
   box-shadow: inset 0 8px rgba(0, 0, 0, 0.2);
 }
-.btn-ways:focus {
+button:focus {
   outline: none;
 }
 
@@ -189,4 +189,26 @@ main::before {
   margin: 0 0 18px;
   text-transform: uppercase;
   line-height: 1;
+}
+
+.rules-container {
+  background-color: #f0f0f0;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 100;
+}
+
+.rules-container button {
+  background-color: transparent;
+  margin-top: 120px;
+  border: none;
+  transform: scale(2);
+  cursor: pointer;
 }
